# apps/api/src/HomePit.Domain/Projects/EffortScopeType.cs
@@ -1,0 +1,8 @@
+namespace HomePit.Domain.Projects;
+
+public enum EffortScopeType
+{
+    Household,
+    Universe,
+    Project
+}
